# BbPlayer

./: README.md  local.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/jcmplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CCGLVideoRender.cpp  CCGLVideoRender.h  CCNDKCommonDef.h  CCNDKLogDef.h  CCOpenGLShader.cpp  CCOpenGLShader.h  CCYUVDataDefine.h  JCAVCodecHandler.cpp  JCAVCodecHandler.h  JCAudioPlayer.cpp  JCAudioPlayer.h  JCMPlayer.cpp  JCMPlayer.h  JCQueueDef.h  OpenSLInterface.c  OpenSLInterface.h
app/src/main/java/com/example/jcmplayer/: FileUtils.java  JCMPlayer.java  MainActivity.java
app/src/main/res/layout/: actionbar_layout.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/jcmplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
